--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
     //UFDL API Dependency
     implementation 'com.github.waikato-ufdl:ufdl4j-image:0.0.1-SNAPSHOT'
     implementation 'com.squareup.okhttp3:okhttp:3.0.1'
+
+    //glide library
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
