Fixed errors with package rename

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.myapplication">
+    package="io.github.waikato_ufdl">
 
     <!-- Permissions -->
     <uses-permission android:name="android.permission.CAMERA"/>
@@ -30,7 +30,7 @@
 
         <provider
             android:name="androidx.core.content.FileProvider"
-            android:authorities="com.example.android.fileprovider"
+            android:authorities="io.github.waikato_ufdl.android.fileprovider"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
