--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,4 +67,7 @@ dependencies {
 
     //library for image compression which will reduce image sizes with negligible loss in quality
     implementation 'id.zelory:compressor:2.1.0'
+
+    implementation "io.reactivex.rxjava3:rxjava:3.0.7"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
 }
