--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ buildscript {
         mavenLocal()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.0'
-
+        classpath 'com.android.tools.build:gradle:4.1.2'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -18,6 +17,7 @@ allprojects {
         google()
         jcenter()
         mavenLocal()
+        maven { url "https://jitpack.io" }
     }
 }
 
